--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "chalk": "^2.4.2",
     "commander": "^4.0.1",
     "detective": "^5.2.0",
-    "enquirer": "^2.3.2"
+    "enquirer": "^2.3.2",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
     "standard": "^14.3.1"
